--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6646,26 +6646,28 @@ to the term \termref{structured OMS} in this \IS}
 ~\todonote[author=Christoph Lange,date=D:201108212129+02'00',type=todo]{Maybe have an(other?) appendix that refers to the usage of DOL within ontology engineering methodologies, or at least to some good practices of using DOL}
 
 
-\infannex{Annotation Vocabularies}\label{a:meta-vocab}
-
-~\todonote[author=Christoph Lange,date=D:20110928190800+02'00',type=q-all]{Or should this rather be normative?}
-
-\ctable[
-caption={Vocabularies recommended for annotating DOL OMS},
-mincapwidth=\textwidth,
-label={tab:annot-vocab},
-pos=h,
-]{lXl}{% table footnotes
-}{
-  Vocabulary name & Purpose & ref.\ML
-  DCMI Metadata Terms & general-purpose and biographical metadata & \cite{DublinCore}\NN
-  Ontology Metadata Vocabulary (OMV) & ontology engineering metadata & \cite{OMV}\LL
-}
-
-~\todonote[author=Christoph Lange,date=D:201107131255+02'00',type=todo]{maybe mention: How do we use the ISO 12620 DCR for our extension of the OMV?}
 
 \infannex{Abstract syntax specified as an SMOF meta model}\label{a:MOF}
-<The SMOF meta model is in preparation.>
+
+\includegraphics[width=1.5\textwidth]{mof/dia/dia0.png}
+\includegraphics[width=\textwidth]{mof/dia/dia1.png}
+\includegraphics[width=\textwidth]{mof/dia/dia2.png}
+\includegraphics[width=\textwidth]{mof/dia/dia3.png}
+\includegraphics[width=\textwidth]{mof/dia/dia4.png}
+\includegraphics[width=\textwidth]{mof/dia/dia5.png}
+\includegraphics[width=\textwidth]{mof/dia/dia6.png}
+\includegraphics[width=\textwidth]{mof/dia/dia7.png}
+\includegraphics[width=\textwidth]{mof/dia/dia8.png}
+\includegraphics[width=\textwidth]{mof/dia/dia9.png}
+\includegraphics[width=\textwidth]{mof/dia/dia10.png}
+\includegraphics[width=\textwidth]{mof/dia/dia11.png}
+\includegraphics[width=\textwidth]{mof/dia/dia12.png}
+\includegraphics[width=\textwidth]{mof/dia/dia13.png}
+\includegraphics[width=\textwidth]{mof/dia/dia14.png}
+\includegraphics[width=\textwidth]{mof/dia/dia15.png}
+\includegraphics[width=\textwidth]{mof/dia/dia16.png}
+\includegraphics[width=\textwidth]{mof/dia/dia17.png}
+
 
 \infannex{Tools for DOL}\label{a:tools}
 
