integrated first version of MOF metamodel

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -466,6 +466,8 @@ author=,date=,id=,replyto=,type=}{}%
 
 \begin{document}
 
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  FRONTMATTER:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -833,7 +835,7 @@ The structuring constructs for OMS in \ref{c:focused-OMS} and \ref{a:dol-text:OM
 %
 6.5.3(a)& 
 An abstract syntax specified as an SMOF compliant meta model.	&
-Currently, the abstract syntax is specified using EBFN, see clause \ref{c:abstract-syntax}. An SMOF meta model is in preparation.
+Currently, the abstract syntax is specified using EBFN, see clause \ref{c:abstract-syntax}. An initial SMOF meta model is given in annex \ref{a:MOF}.
    \\ \hline
 %
 6.5.3(b)& 
@@ -5983,6 +5985,8 @@ like owl:Thing and owl:oneOf, tailored towards the representation of
 
 \normannex{Conformance of UML class diagrams DOL}\label{a:uml-class}
 
+to be done
+
 \normannex{Conformance of CASL with DOL}\label{a:casl}
 
 \normannex{A Core Logic Graph}\label{a:graph}
@@ -6649,24 +6653,43 @@ to the term \termref{structured OMS} in this \IS}
 
 \infannex{Abstract syntax specified as an SMOF meta model}\label{a:MOF}
 
-\includegraphics[width=1.5\textwidth]{mof/dia/dia0.png}
-\includegraphics[width=\textwidth]{mof/dia/dia1.png}
-\includegraphics[width=\textwidth]{mof/dia/dia2.png}
-\includegraphics[width=\textwidth]{mof/dia/dia3.png}
-\includegraphics[width=\textwidth]{mof/dia/dia4.png}
-\includegraphics[width=\textwidth]{mof/dia/dia5.png}
-\includegraphics[width=\textwidth]{mof/dia/dia6.png}
-\includegraphics[width=\textwidth]{mof/dia/dia7.png}
-\includegraphics[width=\textwidth]{mof/dia/dia8.png}
-\includegraphics[width=\textwidth]{mof/dia/dia9.png}
-\includegraphics[width=\textwidth]{mof/dia/dia10.png}
-\includegraphics[width=\textwidth]{mof/dia/dia11.png}
-\includegraphics[width=\textwidth]{mof/dia/dia12.png}
+\newcommand{\toleft}{\noindent$x\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!$}
+
+\includegraphics[width=1.2\textwidth]{mof/dia/dia0.png}
+
+\includegraphics[width=1.2\textwidth]{mof/dia/dia1.png}
+
+\toleft\includegraphics[width=2.3\textwidth]{mof/dia/dia2.png}
+
+\toleft\includegraphics[width=1.6\textwidth]{mof/dia/dia3.png}
+
+\toleft\includegraphics[width=1.9\textwidth]{mof/dia/dia4.png}
+
+\includegraphics[width=0.5\textwidth]{mof/dia/dia5.png}
+
+\includegraphics[width=1.2\textwidth]{mof/dia/dia6.png}
+
+\includegraphics[width=1.2\textwidth]{mof/dia/dia7.png}
+
+\includegraphics[width=1.2\textwidth]{mof/dia/dia8.png}
+
+\includegraphics[width=1.2\textwidth]{mof/dia/dia9.png}
+
+\toleft\includegraphics[width=1.5\textwidth]{mof/dia/dia10.png}
+
+\toleft\includegraphics[width=1.4\textwidth]{mof/dia/dia11.png}
+
+\toleft\includegraphics[width=2.1\textwidth]{mof/dia/dia12.png}
+
 \includegraphics[width=\textwidth]{mof/dia/dia13.png}
-\includegraphics[width=\textwidth]{mof/dia/dia14.png}
-\includegraphics[width=\textwidth]{mof/dia/dia15.png}
-\includegraphics[width=\textwidth]{mof/dia/dia16.png}
-\includegraphics[width=\textwidth]{mof/dia/dia17.png}
+
+\toleft\includegraphics[width=1.8\textwidth]{mof/dia/dia14.png}
+
+\includegraphics[width=0.5\textwidth]{mof/dia/dia15.png}
+
+\toleft\includegraphics[width=1.5\textwidth]{mof/dia/dia16.png}
+
+\toleft\includegraphics[width=1.4\textwidth]{mof/dia/dia17.png}
 
 
 \infannex{Tools for DOL}\label{a:tools}
