conformance of CASL; bib

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -283,7 +283,6 @@ author=,date=,id=,replyto=,type=}{}%
 
 
 %% from HetCASL summary
-
 \newcommand{\Si}{\Sigma}
 \newcommand{\al}{\alpha}
 %\newcommand{\sen}{\mathbf {Sen}}
@@ -1061,7 +1060,7 @@ language can be used as-is in DOL, by reference to its IRI. See \ref{sec:existin
 %
 6.8(c)		&
 Proposals establishing actually (or making this at least possible in theory) OntoIOp conformance of more logical languages and translations will be favored. 	&
-We establish conformance of OWL 2 (annex \ref{a:owl}), Common Logic (annex \ref{a:cl}), RDF and RDFS (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}) and CASL (annex \ref{a:casl})
+We establish conformance of OWL 2 (annex \ref{a:owl}), Common Logic (annex \ref{a:cl}), RDF and RDFS (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}) and \CASL (annex \ref{a:casl})
 with DOL.
 	\\ \hline
 
@@ -2382,7 +2381,7 @@ Annex \ref{a:uml-class} discusses the conformance of UML class diagrams with \DO
  (\emph{normative}).\ednote{Elaborate after the annex has been finished.}
 
 \medskip \noindent 
-Annex \ref{a:casl} discusses the conformance of CASL with \DOL  (\emph{normative}).\ednote{Review
+Annex \ref{a:casl} discusses the conformance of \CASL with \DOL  (\emph{normative}).\ednote{Review
  this after the annex has been finished.}
 
 \medskip \noindent 
@@ -2855,8 +2854,8 @@ available in a class diagram
 \item 	if the behavior prescribed in an interaction diagram is realizable by several state machines cooperating according to a composite structure diagram.
 \end{itemize}
 Such questions are currently hard to answer in a systematic manner. One method to answer these questions and find such errors is a check for semantic 
-consistency. Under some restrictions, the proof of semantic consistency can be (at least partially) performed using model-checking tools like Hugo/RT \cite{HugoRT}. 
-Once a formal semantics for the different diagram types has been chosen (see, e.g. \cite{HetUML}), it is possible to use DOL to specify in which 
+consistency. Under some restrictions, the proof of semantic consistency can be (at least partially) performed using model-checking tools like Hugo/RT \cite{knapp-wuttke:models06wsh:2007}. 
+Once a formal semantics for the different diagram types has been chosen (see, e.g. \cite{knapp-mossakowski-roggenbach:corr:2014}), it is possible to use DOL to specify in which 
 sense the diagrams need to be consistent, and check this by suitable tools.
 
 \section{Use case Model-3: Refinements between UML diagrams of different types, and their reuse}
@@ -3008,7 +3007,7 @@ language', but a meta-language that is used on top of existing OMS languages.
 
 The major functions of \DOL are the following: 
 \begin{itemize}
-		\item \DOL allows the use of OMS in other OMS languages (e.g., UML class diagrams, CASLE, 
+		\item \DOL allows the use of OMS in other OMS languages (e.g., UML class diagrams, \CASL, 
 		OWL, Common Logic) without requiring any changes. These are called \emph{basic OMS}.  
 		\item \DOL allows to define new, more complex  OMS based on existing OMS. These OMS are
 		called \emph{structured OMS}. \DOL provides a number of operations for this purpose; e.g.,
@@ -3096,7 +3095,7 @@ Since \DOL is a meta-language,  it \textit{inherits} the logical language aspect
 \end{description}
 Whereas the first feature determines the expressivity of the language and the possibilities for automated reasoning (decidability, tractability, etc.), the latter two intend to facilitate OMS engineering as well as the engineering of OMS-based software.
 
-Acknowledging the wide tool support that conforming established languages such as OWL, Common Logic, MOF, or CASL\ednote{review language list when annexes are finished} enjoy, existing OMS in these languages remain as they are within the DOL framework. DOL enhances their modularity and annotation facilities to a superset of the modularity and annotation facilities they provide themselves. 
+Acknowledging the wide tool support that conforming established languages such as OWL, Common Logic, MOF, or \CASL\ednote{review language list when annexes are finished} enjoy, existing OMS in these languages remain as they are within the DOL framework. DOL enhances their modularity and annotation facilities to a superset of the modularity and annotation facilities they provide themselves. 
 DOL's modularity and annotation constructs can either be embedded into existing OMS as non-disruptive annotations, or they can be provided as standoff markup, pointing to the OMS they talk about; DOL specifies a syntax and semantics for both variants. DOL's modularity constructs are semantically well-founded within a library of formal relationships between the logics underlying the different supported OMS languages.\ednote{Till, is this standoff markup remark up to date?}
 
 
@@ -3104,7 +3103,7 @@ DOL's modularity and annotation constructs can either be embedded into existing 
 
 
 A large variety of OMS languages in use can be captured at an abstract level using the concept of 
-\emph{institutions} \cite{Ins}.
+\emph{institutions} \cite{GoguenBurstall92}.
 This allows us to develop results independently of the particularities of a logical system and to use the notions of institution and  logical language interchangeably. 
 %We first introduce the concept of \emph{logic syntax}.
 The main idea is to collect the non-logical
@@ -3131,7 +3130,7 @@ the sentences of a signature.
 
 It is also possible to complement an institution with a proof theory,
 introducing a derivability relation between sentences, formalized as 
-an \emph{entailment system} \cite{Meseguer:gl89}. In particular, this
+an \emph{entailment system} \cite{Meseguer89}. In particular, this
 can be done for all logics that have so far been in use in \DOL.
 
 
@@ -4475,7 +4474,7 @@ When $G$ is the category $\xymatrix{\bullet & \bullet \ar[l] \ar[r]
 & \bullet }$ with 3 objects and 2 non-identity arrows, the $G$-colimits are
 called  \emph{pushouts}.  
 
-A major property of colimits of specifications is \emph{amalgamation} (called `exactness' in \cite{Diaconescu1993}). It can be intuitively explained as 
+A major property of colimits of specifications is \emph{amalgamation} (called `exactness' in \cite{DGS91}). It can be intuitively explained as 
 stating that models of given
 specifications can be combined to yield a uniquely determined model of
 a colimit specification, provided that the original models coincide on
@@ -5988,6 +5987,54 @@ like owl:Thing and owl:oneOf, tailored towards the representation of
 to be done
 
 \normannex{Conformance of CASL with DOL}\label{a:casl}
+
+
+\CASL \cite{CASL-RM} extends many-sorted first-order logic with
+partial functions and subsorting.  It also provides induction
+sentences, expressing the (free) generation of datatypes.  \CASL has
+been presented as an institution in \cite{Mossakowski02,CASL-RM}. We
+here only sketch this institution.
+
+\CASL signatures consist of a set $S$ of sorts with a subsort relation $\leq$ between them
+together with
+families $\{PF_{w,s}\}_{w\in S^*, s\in S}$ of partial functions,
+$\{TF_{w,s}\}_{w\in S^*, s\in S}$ of total functions and
+$\{P_w\}_{w\in S^*}$ of predicate symbols. 
+If $\Sigma$ is a signature, 
+two operation symbols with the same name $f$ and with profiles
+$w\rightarrow s$ and $w'\rightarrow s'$, denoted $f_{w,s}$ and $f_{w',s'}$, are in the
+overloading relation if there are $w_0\in S^*$ and $s_0\in S$ such
+that $w_0\leq w, w'$ and $s,s' \leq s_0$. Overloading of predicates is defined in a similar way.
+Signature morphisms consist of maps taking sort, function and predicate symbols
+respectively to a symbol of the same kind in the target signature, and they 
+must preserve subsorting, typing of function and predicate symbols and totality of function symbols,
+ and overloading. 
+%\ednote{remove all references to overloading if it's not relevant to the algorithm}
+
+For a signature $\Sigma$, terms are formed starting with
+variables from a sorted set $X$ using 
+applications of function symbols to terms of appropriate sorts, while
+sentences are partial first-order formulas extended with
+\emph{sort generation constraints} which are triples $(S', F', \sigma')$ such that 
+$\sigma':\Sigma'\rightarrow\Sigma$ and $S'$ and $F'$ are respectively sort and function symbols of
+$\Sigma'$. 
+Partial first-order formulas are translated along a signature morphism 
+$\varphi:\Sigma\rightarrow\Sigma''$ by replacing symbols as prescribed by $\varphi$
+while sort generation constraints are translated by
+composing the morphism $\sigma'$ in their third component with $\varphi$.
+
+Models interpret sorts as nonempty sets such that subsorts are injected into supersorts,
+partial/total function symbols as partial/total functions and 
+predicate symbols as relations,
+ such that the embeddings of subsorts into
+supersorts are monotone w.r.t. overloading.
+%Note that sorts are assumed to be interpreted as non-empty sets,
+%unless they are introduced using the keywords $\keyword{esort}$ or
+%$\keyword{etype}$ (for datatypes). 
+
+The satisfaction relation is the expected one for partial first-order sentences. A sort generation
+constraint $(S', F', \sigma')$ holds in a model $M$ if the carriers of the reduct of $M$ along $\sigma'$ 
+of the sorts in $S'$ are generated by function symbols in $F'$.
 
 \normannex{A Core Logic Graph}\label{a:graph}
 
