--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -431,3 +431,88 @@ We distinguish three kinds of heterogeneity:
 	author = {European Comission},
 	year = {2014},
 }
+
+@article{Mossakowski02,
+  author =	 {Till Mossakowski},
+  title =	 {Relating {\CASL} with Other Specification Languages:
+                  the Institution Level},
+  year =	 2002,
+  journal =	 {Theoretical Computer Science},
+  volume =	 {286},
+  pages =	 {367--475},
+}
+
+@Book{CASL-RM,
+  author =       "{CoFI (The Common Framework Initiative)}",
+  title =        "\textsc{Casl} Reference Manual",
+  year =         "2004",
+  publisher =    {Springer},
+  series =       lncs # "2960 (IFIP Series)",
+  annote =       "Gives full details of the design of \textsc{Casl}: an
+                 informal language summary, concrete and abstract
+                 syntax, well-formedness and model-class semantics, and
+                 proof rules. Includes the libraries of basic
+                 datatypes.",
+}
+
+@INCOLLECTION{knapp-wuttke:models06wsh:2007,
+  AUTHOR = {Alexander Knapp and
+            Jochen Wuttke},
+  TITLE  = {Model Checking of UML 2.0 Interactions},
+  EDITOR = {Thomas Kühne},
+  BOOKTITLE = {Reports Rev. Sel. Papers Wsh.s Symp.s MoDELS 2006},
+  PUBLISHER = {Springer},
+  SERIES = {Lect. Notes Comp. Sci.},
+  NUMBER = {4364},
+  YEAR = {2007},
+  ISBN = {978-3-540-69488-5},
+  PAGES = {42-51},
+  EE = {http://dx.doi.org/10.1007/978-3-540-69489-2_6},
+}
+
+@INCOLLECTION{knapp-mossakowski-roggenbach:corr:2014,
+  AUTHOR = {Alexander Knapp and
+            Till Mossakowski and
+            Markus Roggenbach},
+  TITLE = {An Institutional Framework for Heterogeneous Formal Development in UML},
+  YEAR = {2014},
+  NOTE = {CoRR abs/1403.7747},
+  URL  = {http://arxiv.org/abs/1403.7747},
+}
+
+@online{AlignmentAPI,
+  title = {{Alignment API}},
+  url = {http://alignapi.gforge.inria.fr/},
+  date = {2012-04-03},
+  urldate =      {2012-04-26},
+}
+
+@TechReport{CommonLogic:oldfashioned,
+  crossref = {CommonLogic:base},
+  note = {\url{http://iso-commonlogic.org}},
+}
+@TechReport{CommonLogic:base,
+  key = {CommonLogic},
+  title = {Information technology --- {Common Logic} ({CL}): a framework for a family of logic-based languages},
+  institution = {ISO/IEC},
+  number = {24707:2007},
+  year = 2007}
+
+
+@INPROCEEDINGS{DGS91,
+AUTHOR        = {Diaconescu, R{\u{a}}zvan and Goguen, Joseph and Stefaneas, Petros}, 
+TITLE         = {Logical Support for Modularisation},
+BOOKTITLE     = {Proceedings of a Workshop on Logical Frameworks},
+EDITOR        = {Huet, Gerard and Plotkin, Gordon}, 
+YEAR          = {1991},
+HOWPUBLISHED  = {Programming Research Group, Oxford University},
+}
+
+@Book{STbook,
+  author =      "D. Sannella and A. Tarlecki",
+  publisher =   "Springer",
+  title =       "Foundations of Algebraic Specification and
+                 Formal Software Development",
+  series =      "Monographs in Theoretical Computer Science. An EATCS Series",
+  year =        "2012"
+}
